# SBG-TIR-exit-codes

./: README.md  makefile  pyproject.toml
SBG_TIR_exit_codes/: SBG_TIR_exit_codes.py  __init__.py
SBGv001_exit_codes/: __init__.py
tests/: test_import_SBG_TIR_exit_codes.py  test_import_SBGv001_exit_codes.py
